--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="colormaroon">#DD2665</color>
     <color name="colorcard">#BEF8E6</color>
     <color name="colorlist">#040351</color>
+    <color name="colordark">#147A53</color>
 </resources>
